--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,2 +1,3 @@
-<input type="checkbox" [checked]="task.done">
-<div>{{task.title}}</div>
+<mac-checkbox [checked]="task.done"
+              (outCheck)="task.done = $event"></mac-checkbox>
+<div class="title">{{task.title}}</div>
