--- a/src/app/tasks/task-list/task-list.component.html
+++ b/src/app/tasks/task-list/task-list.component.html
@@ -1,8 +1,8 @@
 <mac-toggle [buttonList]="taskFilterTypes"
-            [activeButton]="activeTaskFilterType | async"
+            [activeButton]="activeTaskFilterType"
             (outActivate)="activateFilterType($event)">
 </mac-toggle>
 <mac-enter-task (outEnterTask)="addTask($event)"></mac-enter-task>
 <div class="tasks">
-  <mac-task *ngFor="let task of filteredTasks | async" [task]="task" (outUpdateTask)="updateTask($event)"></mac-task>
+  <mac-task *ngFor="let task of tasks" [task]="task" (outUpdateTask)="updateTask($event)"></mac-task>
 </div>
