--- a/src/app/project/project-container/project-container.component.html
+++ b/src/app/project/project-container/project-container.component.html
@@ -1,2 +1,5 @@
-<mac-project [project]="selectedProject | async">
+<mac-project [project]="selectedProject | async"
+             [tabs]="tabs"
+             [activeTab]="activeTab"
+             (outActivateTab)="activateTab($event)">
 </mac-project>
