--- a/src/app/project/project/project.component.html
+++ b/src/app/project/project/project.component.html
@@ -11,3 +11,5 @@
 <mac-tabs [tabs]="tabs" [activeTab]="activeTab" (outActivateTab)="activateTab($event)"></mac-tabs>
 <mac-task-list-container *ngIf="activeTab.id === 'tasks'">
 </mac-task-list-container>
+<mac-project-comments-container *ngIf="activeTab.id === 'comments'">
+</mac-project-comments-container>
